--- a/styles.css
+++ b/styles.css
@@ -184,6 +184,7 @@ ul li a:hover {
 
 .top {
 	padding: 5px;
+	margin-bottom: 5px;
 	text-decoration: none;
 	color: yellowgreen;
 	border: 1px solid;
